add verify emails feature
